# MAI_ParallelComputing_labs

./: README.md
MAI_ParallelComputing_labs/Lab_1/hard_task/: README.md  main.cpp  make_graphics.py
MAI_ParallelComputing_labs/Lab_1/hard_task/common/: CPU_common.hpp  CUDA_common.hpp  GLOB_common.hpp  out_mode.hpp
MAI_ParallelComputing_labs/Lab_1/hard_task/cpu_impl/: cpu_implementation.cpp  cpu_implementation.hpp
MAI_ParallelComputing_labs/Lab_1/hard_task/cuda_impl/: cuda_implementation.cu  cuda_wrappers.hpp
MAI_ParallelComputing_labs/Lab_1/hard_task/verify/: verify.cpp  verify.hpp
MAI_ParallelComputing_labs/Lab_1/simple_task/: CMakeLists.txt  README.md  build.sh  main.cpp
MAI_ParallelComputing_labs/Lab_1/simple_task/cpu_impl/: cpu_implementation.cpp  cpu_implementation.hpp
MAI_ParallelComputing_labs/Lab_1/simple_task/cuda_impl/: cuda_implementation.cu  cuda_wrappers.hpp
MAI_ParallelComputing_labs/Lab_1/simple_task/verify/: verify.cpp  verify.hpp
